# ddd-product-dev-sample-jp

./: .gitignore  Cargo.toml  Dockerfile.dev  README.md  docker-compose.yml  migrate-db.sh  prepare-sqlx.sh
.cursor/rules/: about-project.mdc  backend-architecture.mdc  ci-cd-process.mdc  ci-setup.mdc  coding-policy.mdc  dev-environment.mdc  development-environment.mdc  development-workflow.mdc  directory-structure.mdc  documentation-guide.mdc  frontend-dependency-unrs-resolver.mdc  frontend-dev-env-build.mdc  frontend-dev-env.mdc  product-development-process.mdc  storybook-nextjs-config.mdc
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  build.rs  rust-toolchain.toml
backend/.sqlx/: query-1a4958b65b9181866108d437ee6c35e259b41f323b79832f399559217df39357.json  query-223bb24014c0b0714f69ed86cc7eca4347d8496d664812eed8050671a21ef43c.json  query-28f344de880a1d53c3d5ef151a0fc8813601e5e11ea4c0d12694778764fdba2f.json  query-2c54d82eb242709ed8bf9e1e1eba4cb27023fb615e9202b29853b9557a3ef4fa.json  query-a237d84e63808933ac3d64cf4ebf62d3ef6827eeeff2f2022ad61efe6950c600.json  query-f4aba6901711d56a072f88860a80f970a1ae356a9a6dddb9c817d0f9449a82ed.json  query-f5f3a4eb2bd4885ca0888801ead9369aa282312cf564b2b5f32297cd4b267197.json  query-f86b69666245127e0b272e81c4656e262b1e7d5c6091eea4759a84d20ace2cdb.json  query-fa470f7e63663cc625338b1f0e0a6abc92dd5f757bc912b6d4e60a5b69cfe407.json  query-fa9ed35e93f11e24c75703f0c15cb1e0102e5b787a46d930591ea8bf323f35ed.json
backend/migrations/: 20250426041420_init.down.sql  20250426041420_init.up.sql
backend/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  main.rs
backend/src/routes/: health_check.rs  mod.rs
backend/tests/: db.rs  health_check.rs
docs/: DEVELOPMENT_GUIDE.md  PRODUCT_DEVELOPMENT_GUIDE.md  technical_tasks.md
docs/architecture/: overview.md
docs/architecture/adr/: 0001-use-onion-architecture.md  0002-use-mockall-for-testing.md  0003-adopt-state-as-types-modeling.md  0004-adopt-web-application-as-service-model.md  0005-adopt-spa-api-architecture.md  0006-adopt-react-typescript-for-frontend.md  0007-adopt-postgresql-as-datastore.md  0008-adopt-render-vercel-as-platform.md  0009-adopt-auth0-for-authentication.md  001-use-onion-architecture.md  0010-adopt-rest-api-design.md  0011-adopt-openapi-with-utoipa.md  0012-adopt-storybook-for-ui-documentation.md  0013-adopt-shadcn-ui-for-component-library.md  (+8 more)
docs/db/: er-diagram.md  schema.sql
docs/domain/: domain-model.md  ubiquitous-language.md
docs/process/: iteration_planning.md  iteration_template.md
docs/product/: personas.md  roadmap.md  vision_strategy.md
docs/requirements/: eventstorming.md  user_story_mapping.md
docs/ui/: login_page.md  present-reservation-shipping-proxy.md  screen-flow.md  screen-template.md  signup_page.md  unauthenticated_top_page.md
frontend/: Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend_backup/: .prettierignore  .prettierrc.json
src/: application.rs  domain.rs  infrastructure.rs  lib.rs  main.rs
(+40 files in other folders)
