[package]
name = "ddd_sample_jp"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0" # エラーハンドリングを容易にするため
uuid = { version = "1.16", features = ["v4"] } # 一意なID生成のため # uuidのバージョンを1.16に更新
anyhow = "1.0" # main関数でのエラーハンドリング簡略化のため
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json" ] }
serde = { version = "1.0", features = ["derive"] } # データ構造のシリアライズ/デシリアライズ (utoipaで必要)
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] } # OpenAPIスキーマ生成
utoipa-swagger-ui = { version = "7", features = ["actix-web"] } # Swagger UI

[dev-dependencies]
mockall = "0.11"
reqwest = "0.12" 